docs: fix dark mode image hack

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -1,3 +1,3 @@
-html.dark article img {
+html.dark main img {
   filter: invert(1) hue-rotate(180deg);
 }
